# yurin-testing

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  jfrog-github-oidc-example.yml
src/calculator/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
